style.css
* {
    box-sizing: border-box;
}

body {
    height: 100%;
    margin: 0;
    text-align: center;
    background-image: linear-gradient(rgb(167, 125, 202), rgb(185, 99, 142));
    background-image: webkit-linear-gradient(rgb(167, 125, 202), rgb(185, 99, 142));
    background-image: moz-linear-gradient(rgb(167, 125, 202), rgb(185, 99, 142));
    background-repeat: no-repeat;
    background-attachment: fixed;
    font-family:'Rubik', sans-serif;
    font-weight: 300;
}

.page-container {
    position: relative;
    min-height: 100vh;
}

.content-wrap {
    padding-bottom: 2.5rem;
}

h1 {
    margin-top: 50px;
    margin-bottom: -15px;
    color: rgb(255, 238, 0);
    font-size: 60px;
    font-family: 'Leckerli One', cursive;
    text-shadow: 4px 4px black;
}

.type-area {
    margin: 10px;
    height: 30px;
    font-family: 'Rubik', sans-serif;
    font-weight: 300;
    border: none;
    font-size: 20px;
}

.button {
    height: 30px;
    font-family:'Rubik', sans-serif;
    border: none;
    font-size: 20px;
}

.select-days {
    margin: 15px 0 30px 0;
}

footer {
    position: absolute;
    text-align: center;
    bottom: 0;
    width: 100%;
    height: 40px;
    padding-bottom: 20px;
    font-family:'Rubik', sans-serif;
    font-weight: 500;
}

